@@ -1,6 +1,6 @@
 .\" Automatically generated by Pandoc
 .\"
-.TH "CTWILL" "1" "December 02, 2023" "Web2c @VERSION@" "General Commands Manual"
+.TH "CTWILL" "1" "February 14, 2024" "Web2c @VERSION@" "General Commands Manual"
 .SH NAME
 ctwill, ctwill-proofsort, ctwill-refsort, ctwill-twinx \- translate CWEB to TeX with
 mini\-indexes
@@ -10,8 +10,8 @@ mini\-indexes
 .PD 0
 .P
 .PD
-\f[B]ctwill-proofsort\f[R] < \f[I]texfile\f[R].tex >
-\f[I]texfile\f[R]\-sorted.tex
+( \f[B]ctwill-proofsort\f[R] < \f[I]texfile\f[R].tex ) 1<>
+\f[I]texfile\f[R].tex
 .PD 0
 .P
 .PD
@@ -106,10 +106,8 @@ output.
 You can use \f[B]ctwill-proofsort\f[R] to get the index entries in alphabetical
 order; just invoke
 .IP \[bu] 2
-\f[B]ctwill-proofsort\f[R] < \f[I]texfile\f[R].tex >
-\f[I]texfile\f[R]\-sorted.tex
-.IP \[bu] 2
-\f[B]mv\f[R] \f[I]texfile\f[R]\-sorted.tex \f[I]texfile\f[R].tex
+( \f[B]ctwill-proofsort\f[R] < \f[I]texfile\f[R].tex ) 1<>
+\f[I]texfile\f[R].tex
 .PP
 after invoking \f[B]ctwill\f[R] (twice), but before invoking TeX (once).
 .PP
